# videototext

./: .gitignore  README-PORTABLE.txt  README.md  index.html  main.py  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: build-desktop.yml
installer/: VideoToText.iss  build-setup.ps1  install.cmd  uninstall.cmd
scripts/: build-installer.ps1  build-portable.ps1  build.ps1  build.sh  download-ocr-assets.ps1  package-portable.ps1  stage-portable.ps1
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  batch.rs  export.rs  imports.rs  mod.rs  ocr.rs  settings.rs
src-tauri/src/services/: ai_service.rs  export_service.rs  image_io.rs  mod.rs  ocr_service.rs  settings_service.rs  url_import.rs
src-tauri/tests/: app_settings_camel_case.rs  deepseek_flow_probe.rs  deepseek_live_smoke.rs  deepseek_request_shape.rs  export_filename_rules.rs  ocr_assets_required.rs  ocr_commands.rs  settings_commands.rs  settings_roundtrip.rs  url_import_rejects_html.rs
src/components/: AccumulatorPane.vue  AiResultPane.vue  ImageInputPanel.vue  ImagePreviewPane.vue  OcrResultPane.vue  ProcessOutputTabs.vue  SettingsDialog.vue  StatusBar.vue
src/lib/: api.ts  clipboard.ts  export.test.ts  export.ts  markdown.ts  types.ts
src/stores/: app.ts
src/videototext/: __init__.py  asr.py  downloader.py  engine.py  exporter.py  gui.py  media.py  models.py  ocr.py  utils.py
(+1 files in other folders)
